2009-07-26  Mark Ellis  <mark@mpellis.org.uk>

	* lib/{info.c,synce.h.in} - allow search/creation of SynceInfo 
	  by object path as well as device name

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.14 release

2009-06-08  Mark Ellis  <mark@mpellis.org.uk>

	* move rapi socket connection to librapi2, store device object path
	  in SynceInfo

2009-04-14  Mark Ellis  <mark@mpellis.org.uk>

	* lib/info.c - clear an error correctly when fetching local_iface_ip

2009-04-09  Mark Ellis  <mark@mpellis.org.uk>

	* add local_iface_ip to SynceInfo
	* hide the SYnceInfo struct and create _get_ functions

2009-03-09  Mark Ellis  <mark@mpellis.org.uk>

	* lib/info.c - check for hal property marking the extra
	  port of a 4 endpoint serial device, and ignore it

2009-01-29  Mark Ellis  <mark@mpellis.org.uk>

	* improve readability of endian section of synce.h, add
	  big-endian conversion macros

2009-01-11  Jonny Lamb  <jonny@debian.org>

	* lib/Makefile.am: Added -lm.

2009-01-10  Mark Ellis  <mark@mpellis.org.uk>

	* 0.13 release

2009-01-08  Mark Ellis  <mark@mpellis.org.uk>

	* lib/synce_log.c - check for incomplete conversion in
	  wstr logging
	* man/wstr_to_ascii.3 - notes about NULL return from
	  incomplete conversion

2008-12-23  Mark Ellis  <mark@mpellis.org.uk>

	* lib/synce_log.c - use wstr_to_current() in wstr logging 

2008-12-16  Mark Ellis  <mark@mpellis.org.uk>

	* lib/info.c - use correct keys to get os and hardware
	  from vdccm info file
	* lib/info.c - check odccm is running before attempting to
	  get devices, ignore devices from hal without
	  pda.pocketpc.name as these are not valid

2008-11-19  Mark Ellis  <mark@mpellis.org.uk>

	* lib/synce_socket.c - applied patch from andyakadum
	  to build on Solaris, many thanks !

2008-05-06  Mark Ellis  <mark@mpellis.org.uk>

	* update synce.7, add some comments to configure.ac.in

2008-05-04  Mark Ellis  <mark@mpellis.org.uk>

	* add all error codes
	* remove duplicate inet_pton.c