@@ -1,3 +1,7 @@
+2009-08-04  Mark Ellis  <mark@mpellis.org.uk>
+
+	* lib/{errors.c,synce_types.h} - HRESULT handling funcs and macros
+
 2009-07-26  Mark Ellis  <mark@mpellis.org.uk>
 
 	* lib/{info.c,synce.h.in} - allow search/creation of SynceInfo 
